[package]
name = "differential-growth"
version = "0.1.0"
authors = ["Dries Cruyskens <dries.cruyskens@gmail.com>"]
description = """
A Rust implementation of the differential growth algorithm.
"""
documentation = "https://docs.rs/differential-growth"
homepage = "https://github.com/DriesCruyskens/differential-growth-rs"
repository = "https://github.com/DriesCruyskens/differential-growth-rs"
readme = "README.md"
keywords = ["generative", "art"]
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
# You can generate your own starting points and disable
# default features.
default = ["point_generators"]
point_generators = []

[dependencies]
nalgebra = "0.31.0"
kd-tree = { version = "0.4.1", features = ["nalgebra"] }
typenum = "1.15.0"

[dev-dependencies]
criterion = "0.3"
nannou = "0.18.1"

[[bench]]
name = "bench"
harness = false

